--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Diretórios do Maven
+/target/
+
+# Arquivos e pastas do Eclipse
+.classpath
+.project
+.settings/
